feat(ME-91): Create Crud Accounting Center
