# routes/backoffice/accounting-centers.php
@@ -1,0 +1,7 @@
+<?php
+
+use App\Http\Controllers\Backoffice\Accounting\AccountingCenterPostController;
+use Illuminate\Support\Facades\Route;
+
+Route::post('/accounting-centers', AccountingCenterPostController::class)
+    ->name('accounting-centers.create');
